fix login onSubmit handler by making withCredentials: true
- add value attributes on createRecipe form inputs
- uninstalled react-cookie form dependency
- refactored navbar to user localStorage userId to check if user isloggenIn
- styled webkit scrollbar

--- a/client/src/globals.css
+++ b/client/src/globals.css
@@ -8,3 +8,15 @@
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
 }
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-neutral-900;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-neutral-600;
+}
